bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Court__c/Padel_Court__c.object-meta.xml
<CustomObject>
    <label>Padel Court</label>
    <pluralLabel>Padel Courts</pluralLabel>
    <nameField>
        <displayFormat>COURT-{0000}</displayFormat>
        <label>Court Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>