bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Court__c/fields/Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_Name__c</fullName>
    <label>Court Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>