bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Court__c/fields/Court_Number__c.field-meta.xml
<CustomField>
    <fullName>Court_Number__c</fullName>
    <label>Court Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>