bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Court__c/validationRules/Court_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Court_Name_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Court_Name__c)</errorConditionFormula>
    <errorDisplayField>Court_Name__c</errorDisplayField>
    <errorMessage>Nazwa kortu jest wymagana</errorMessage>
</ValidationRule>